fixed visual alignment bug

--- a/src/components/FoldComponent/FoldComponent.scss
+++ b/src/components/FoldComponent/FoldComponent.scss
@@ -8,10 +8,12 @@
 			width: 50px;
 			height: 50px;
 			transition: rotate 0.5s ease, scale 0.2s ease;
+			margin-right: 5px;
 		}
 		h2 {
 			margin: 0px;
 			transition: font-size 0.2s ease;
+			width: 100%;
 		}
 
 		&:hover {
